<resources>
	<string name="app_name">THOEIC Hangman</string>
	<string name="thoeic">THOEIC</string>
	<string name="hangmanLoad0">_ _ _ _ _ _ _</string>
	<string name="parzival48">parzival48</string>
	<string name="startGame">PLAY &#128640;</string>
	<string name="vocabulary">&#128209; VOCABULARY</string>
	<string name="rate">&#11088; RATE APP</string>
	<string name="about">&#127759; ABOUT</string>
	<string name="A">A</string>
	<string name="B">B</string>
	<string name="C">C</string>
	<string name="D">D</string>
	<string name="E">E</string>
	<string name="F">F</string>
	<string name="G">G</string>
	<string name="H">H</string>
	<string name="I">I</string>
	<string name="J">J</string>
	<string name="K">K</string>
	<string name="L">L</string>
	<string name="M">M</string>
	<string name="N">N</string>
	<string name="O">O</string>
	<string name="P">P</string>
	<string name="Q">Q</string>
	<string name="R">R</string>
	<string name="S">S</string>
	<string name="T">T</string>
	<string name="U">U</string>
	<string name="V">V</string>
	<string name="W">W</string>
	<string name="X">X</string>
	<string name="Y">Y</string>
	<string name="Z">Z</string>
	<string name="loading">LOADING</string>
	<string name="great">Great &#128077;</string>
	<string name="gameOver">Game Over &#128557;</string>
	<string name="findSynonym">คำใดมีความหมายใกล้เคียง \n คำนี้มากที่สุด?</string>
	<string name="partOfSpeech">( %1$s )</string>
	<string name="playAgain">PLAY AGAIN &#128640;</string>
	<string name="wrong">ยังไม่ถูกต้อง\nลองดูอีกครั้ง</string>
	<string name="excellent">Excellent &#128079;</string>
	<string name="tryAgain">ไม่เป็นไร มาลองดูกันใหม่</string>
	<string name="vocab_fragment">vocab_fragment</string>
	<string name="synDot">Syn.</string>
	<string name="tapToRetry">Tap to Retry</string>
	<string name="AndroidDev">&#128518; Android Developer :</string>
	<string name="BackendDev">&#128513; Backend Developer :</string>
	<string name="UxUi">&#128522; UX/UI Designer :</string>
	<string name="Tester">&#128528; Tester :</string>
	<string name="User">&#128560; Active User :</string>
	<string name="facebook">facebook.com/parzival48</string>
	<string name="instagram">instagram.com/parzival48</string>
	<string name="twitter">twitter.com/parzival48</string>
	<string name="github">github.com/parzival48</string>
	<string name="also">also parzival48</string>
	<string name="close">close (x)</string>
	<string name="myMail">parzival48.tech@gmail.com</string>
</resources>