<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/darkGrayTrans">


	<androidx.cardview.widget.CardView
		android:id="@+id/cardLayout"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="#CECECE"
			android:orientation="vertical"
			android:padding="8dp">

			<TextView
				android:id="@+id/btnClose"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginEnd="4dp"
				android:layout_marginTop="4dp"
				android:fontFamily="sans-serif-smallcaps"
				android:text="@string/close"
				android:textAlignment="viewEnd"
				android:textColor="@color/incorrect"
				android:textSize="12sp" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:layout_marginTop="0dp"
				android:fontFamily="casual"
				android:text="@string/AndroidDev"
				android:textColor="@color/black"
				android:textSize="12sp"
				android:textStyle="bold" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="34dp"
				android:fontFamily="sans-serif-thin"
				android:text="@string/github"
				android:textSize="12sp"
				android:textStyle="bold" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:layout_marginTop="12dp"
				android:fontFamily="casual"
				android:text="@string/BackendDev"
				android:textColor="@color/black"
				android:textSize="12sp"
				android:textStyle="bold" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="34dp"
				android:fontFamily="sans-serif-thin"
				android:text="@string/facebook"
				android:textSize="12sp"
				android:textStyle="bold" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:layout_marginTop="12dp"
				android:fontFamily="casual"
				android:text="@string/UxUi"
				android:textColor="@color/black"
				android:textSize="12sp"
				android:textStyle="bold" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="34dp"
				android:fontFamily="sans-serif-thin"
				android:text="@string/instagram"
				android:textSize="12sp"
				android:textStyle="bold" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:layout_marginTop="12dp"
				android:fontFamily="casual"
				android:text="@string/Tester"
				android:textColor="@color/black"
				android:textSize="12sp"
				android:textStyle="bold" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="34dp"
				android:fontFamily="sans-serif-thin"
				android:text="@string/twitter"
				android:textSize="12sp"
				android:textStyle="bold" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:layout_marginTop="12dp"
				android:fontFamily="casual"
				android:text="@string/User"
				android:textColor="@color/black"
				android:textSize="12sp"
				android:textStyle="bold" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="34dp"
				android:fontFamily="sans-serif-thin"
				android:text="@string/also"
				android:textSize="12sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/btnEmail"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				android:layout_marginTop="16dp"
				android:fontFamily="sans-serif-smallcaps"
				android:text="@string/myMail"
				android:textAlignment="center"
				android:textColor="@color/blue"
				android:textSize="12sp"
				android:textStyle="bold" />

		</LinearLayout>

	</androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>