<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_app_background"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/btnStartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/btnVocab"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="200dp"
        android:textSize="40sp"
        android:textColor="@color/chalkPink"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:text="@string/startGame"
        android:shadowColor="@color/textShadow"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="2"/>

    <TextView
        android:id="@+id/btnVocab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnStartGame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"
        android:textSize="20sp"
        android:textColor="@color/chalkBlue"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:text="@string/vocabulary"
        android:shadowColor="@color/textShadow"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="2"/>

    <TextView
        android:id="@+id/btnAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnVocab"
        app:layout_constraintStart_toStartOf="@id/btnVocab"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textColor="@color/chalkBlue"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:text="@string/about"
        android:shadowColor="@color/textShadow"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="2"/>

    <TextView
        android:id="@+id/btnRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnAbout"
        app:layout_constraintStart_toStartOf="@id/btnAbout"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textColor="@color/chalkBlue"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:text="@string/rate"
        android:shadowColor="@color/textShadow"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="2"/>


</androidx.constraintlayout.widget.ConstraintLayout>