<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="4dp"
		android:layout_margin="16dp"
		android:background="@color/chalkBlue"
		app:layout_constraintTop_toBottomOf="@id/txtGreat" />

	<LinearLayout
		android:id="@+id/secondBar"
		android:layout_width="match_parent"
		android:layout_height="4dp"
		android:layout_margin="16dp"
		android:background="@color/chalkBlue"
		app:layout_constraintTop_toBottomOf="@id/txtPartOfSpeech"
		android:orientation="horizontal" />

	<TextView
		android:id="@+id/txtEnglish"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="32dp"
		android:textAlignment="center"
		android:textColor="@color/chalkWhite"
		android:textSize="28dp"
		android:textStyle="bold"
		app:layout_constraintTop_toBottomOf="@id/txtGreat"
		tools:text="discussion" />

	<TextView
		android:id="@+id/txtMeaning"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:textAlignment="center"
		android:textColor="@color/chalkWhite"
		android:textSize="20dp"
		app:layout_constraintTop_toBottomOf="@id/txtEnglish"
		tools:text="การแลกเปลี่ยนความเห็น" />

	<TextView
		android:id="@+id/txtPartOfSpeech"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:textAlignment="center"
		android:textColor="@color/chalkPink"
		android:textSize="18dp"
		android:textStyle="bold"
		app:layout_constraintTop_toBottomOf="@id/txtMeaning"
		tools:text="(n.)" />

	<TextView
		android:id="@+id/txtGreat"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="36dp"
		android:fontFamily="casual"
		android:text="@string/gameOver"
		android:textAlignment="center"
		android:textColor="@color/chalkYellow"
		android:textSize="24dp"
		android:textStyle="bold"
		app:layout_constraintTop_toTopOf="parent" />


	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/endingLayout"
		app:layout_constraintTop_toBottomOf="@id/secondBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/txtInstruction"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="16dp"
			android:text="@string/tryAgain"
			android:textAlignment="center"
			android:textColor="@color/chalkWhite"
			android:textSize="20dp"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/btnPlayAgain"
			android:layout_marginTop="80dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="casual"
			android:shadowColor="@color/textShadow"
			android:shadowDx="5"
			android:shadowDy="5"
			android:shadowRadius="2"
			android:text="@string/playAgain"
			android:textColor="@color/chalkPink"
			android:textSize="36sp"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/txtInstruction" />

	</androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>